--- a/MyPeronalWebSite/Areas/Admin/Views/Shared/_AdminLayout.cshtml
+++ b/MyPeronalWebSite/Areas/Admin/Views/Shared/_AdminLayout.cshtml
@@ -192,7 +192,7 @@
                     <ul class="nav nav-pills nav-sidebar flex-column" data-widget="treeview" role="menu" data-accordion="false">
 
                         <li class="nav-item">
-                            <a href="#" class="nav-link">
+                            <a href="/Admin/Admin/Index" class="nav-link">
                                 <i class="nav-icon fas fa-tachometer-alt"></i>
                                 <p>
                                     AnaSayfa
@@ -202,7 +202,7 @@
 
                         </li>
                         <li class="nav-item">
-                            <a href="../widgets.html" class="nav-link">
+                            <a href="/Admin/Admin_AboutMe/Index" class="nav-link">
 
                                 <p>
                                     Hakkımda
@@ -211,16 +211,16 @@
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a href="../widgets.html" class="nav-link">
+                            <a href="/Admin/Admin_Contact/Index" class="nav-link">
 
                                 <p>
-                                    İletişim
+                                    İletişim Mesajları
 
                                 </p>
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a href="../widgets.html" class="nav-link">
+                            <a href="/Admin/Admin_Project" class="nav-link">
 
                                 <p>
                                     Projelerim
@@ -229,7 +229,7 @@
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a href="../widgets.html" class="nav-link">
+                            <a href="/Admin/Admin_ProjectDetails/Index" class="nav-link">
 
                                 <p>
                                     Proje Detayları
@@ -238,7 +238,7 @@
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a href="../widgets.html" class="nav-link">
+                            <a href="/Admin/Admin_Technologies/Index" class="nav-link">
 
                                 <p>
                                     Kullandığım Teknolojiler
@@ -247,7 +247,7 @@
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a href="../widgets.html" class="nav-link">
+                            <a href="/Admin/Admin_User/Index" class="nav-link">
 
                                 <p>
                                     Kullanıcı Bilgileri
