--- a/MyPeronalWebSite/Views/Home/Index.cshtml
+++ b/MyPeronalWebSite/Views/Home/Index.cshtml
@@ -241,9 +241,9 @@
 
 
 
-<section class="blog-and-news-are tmp-section-gap">
+<section class="blog-and-news-are tmp-section-gap" id="Projects">
     <div class="container">
-        <div class="section-head mb--50" id="projects">
+        <div class="section-head mb--50" >
             <div class="section-sub-title center-title tmp-scroll-trigger tmp-fade-in animation-order-1">
                 <span class="subtitle"> @Model.Tbl_Resource.FirstOrDefault(x => x.NavigationName == "Bitmiş Proje").Value </span>
             </div>
@@ -380,9 +380,9 @@
 
 
 
-<section class="get-in-touch-area tmp-section-gapBottom">
+<section class="get-in-touch-area tmp-section-gapBottom" id="GetinTouch">
     <div class="container">
-        <div class="contact-get-in-touch-wrap" id="get-in-touch">
+        <div class="contact-get-in-touch-wrap" >
             <div class="get-in-touch-wrapper tmponhover" style="--x: 460px; --y: 415px;">
                 <div class="row g-5 align-items-center">
                     <div class="col-lg-5">
